--- a/Industrial/waybar/style.css
+++ b/Industrial/waybar/style.css
@@ -2,13 +2,14 @@
   border: none;
   border-radius: 0px;
   font-family: VictorMono Nerd Font;
-  font-size: 15px;
-  min-height: 0;
+  font-size: 16px;
+  min-height: 20px;
   padding: 0;
   margin: 0;
+  /* height: 20px; */
 }
 
-/* Fundo e texto principais - Kanagawa */
+/* Fundo e texto principais - Industrial */
 window#waybar {
   background: #0f0f0f;
   color: #5c5048;
@@ -42,5 +43,5 @@ tooltip {
   border: 1px solid #2a2a2a;
   padding: 6px;
   font-family: VictorMono Nerd Font;
-  font-size: 12px;
+  font-size: 11px;
 }
